Updated google map location, removed line break before hero-image, fixed spacing on menu link by removing margin-rght and set to margin: 10px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ h1,h2 {
 }
 #menu li {
     list-style-type: none;
-    margin-right: 30px;
+    margin: 10px;
 }
 #menu a {
     text-decoration: none;
